<resources>

    <string name="app_c2dm_email">moses.tud@googlemail.com</string>
    
    <string name="app_name">MoSeS</string>
    <string name="title_activity_main">MoSeS</string>
    <string name="title_activity_questionnaire">Questionnaire</string>

	<!-- Todo: Sort it pls -->
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="connected">Connected</string>
	<string name="login_error">Error while logging in.</string>
    <string name="nonEmptyString">Please enter a non-empty string.</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="downloadingApp">Downloading the app...</string>
    <string name="pleaseWait">Please wait.</string>
    <string name="noInternetConnection_title">No connection</string>
    <string name="noInternetConnection_message">There seems to be no open internet connection present for downloading the app.</string>
    <string name="noInternetConnection_userStudy_message">Can\'t show user study details. No internet connection. Try to fix it and try again later.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">error</string>
    <string name="downloadApk_errorMessage">An error occurred while trying to download the app: %1$s.</string>
    <string name="apkInstallManager_errorMessage">Service is not started yet, thus the installation could not be started</string>
    <string name="apkInstallManager_apkInstallFailed">Apk install failed</string>
    <string name="open">Open</string>
    <string name="install">Install</string>
    <string name="q_send">Send</string>
    <string name="q_answersSent">Your answers have been sent!</string>
    <string name="q_next">Next</string>
    <string name="userStudy_loading">Loading...</string>
    <string name="userStudy_loadingInformation">Loading userstudy information</string>
    <string name="userStudy_errorMessage">An error occurred when retrieving the informations for a user study: %1$s.\nSorry! This was a shock for both of us. Maybe you could try again from the available tab later? Thanks!</string>
    <string name="userStudy_errorMessage2">An error occurred when installing the user study app. Sorry!</string>
    <string name="userStudy_errorMessage_saveDatabase">An error occurred when saving the app database.</string>
    
    <string name="userStudy_newStudyAvailable">A new user study is available for you!</string>
    <string name="userStudy_userStudyName">Name: %1$s</string>
    <string name="userStudy_userStudyDescription">%1$s</string>
    <string name="userStudy_userStudyUsedSensors">Used sensors: %1$s</string>
    
    <string name="loadingName">Loading Name... (ID: %1$s)</string>
    <string name="loadingDescription">Loading Description...</string>
    <string name="not_set">not set</string>
    
    
    <string name="hwInfo_errorMessage">Error while retrieving Hardware Informations.</string>
    <string name="hwInfo_parametersRetrievedSuccessfully">Parameters retrieved successfully from server</string>
    <string name="hwInfo_androidVersion">Android version:</string>
    <string name="hwInfo_sensors">SENSORS:</string>
    
    <string name="downloadApk_downloadFailed">Download failed.</string>
    <string name="downloadApk_errorMessage2">Server sent malformed url. We could not download application: %1$s</string>
    <string name="downloadApn_failedLinkRequest">Downloadlink request failed</string>
    
    <string name="appUpdateAvailable">An update is available for the app \"%1$s\".</string>
    
    <!-- Sensor names -->
    <string name="sensor_all">All</string>
    <string name="sensor_unknown">Unknown sensor</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_magnetic_field">Magnetic field sensor</string>
    <string name="sensor_orientation">Orientation sensor</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_light">Light sensor</string>
    <string name="sensor_pressure">Pressure sensor</string>
    <string name="sensor_temperature">Temperature sensor</string>
    <string name="sensor_proximity">Proximity sensor</string>
    <string name="sensor_gravity">Gravity sensor</string>
    <string name="sensor_linear_acceleration">Linear acceleration sensor</string>
    <string name="sensor_rotation">Rotation sensor</string>
    <string name="sensor_humidity">Humidity sensor</string>
    <string name="sensor_ambient_temperature">Ambient temperature</string>
    
   
    <!-- Tabs -->
    <string name="tab_available">Available</string>
    <string name="tab_running">Running</string>
    <string name="tab_history">History</string>
    
       
    <!-- Login screen -->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_hint_bad_email">Please enter a valid email address.</string>
    <string name="login_hint_bad_pass">Please enter a password containing at least six characters.</string>
    <string name="checking_credentials">Authenticating&#8230;</string>
    <string name="wrong_credentials">Email and/or password are wrong</string>
    <string name="verifying_credentials">Verifying your login credentials.</string>
    <string name="check_internet">Not able to connect to MoSeS. Check your Internet connection.</string>

    <!-- DeviceID -->
    <string name="actionBar_deviceID_text">Device ID</string>
    <string name="deviceID_text">Device ID</string>
    <string name="deviceID_text2">Device ID:</string>
    <string name="deviceID_decr_text">Please enter an ID for your device.</string>
    <string name="deviceID_decr_text2">This ID can be an arbitrary non-empty string and is used to identify your device in our system. Please note that only alphanumeric characters are allowed.</string>
    <string name="deviceID_set_button">Set device ID</string>
    <string name="deviceID_not_entered">No device ID entered.</string>
    <string name="deviceID_change_text">Changing the device ID failed, please select another device ID or proceed if you don\'t want to change the ID anymore.</string>

    <!-- Dialogs -->
    <string name="dialog_duplicated_deviceID_title">Device ID is already in use.</string>
    <string name="dialog_duplicated_deviceID_text">Your chosen device ID is already in use by: &#160;</string>
    <string name="dialog_duplicated_deviceID_text2">Please choose update if you want to replace this device by your current.</string>
    <string name="dialog_duplicated_deviceID_update">Update</string>
    <string name="dialog_duplicated_deviceID_cancel">Cancel</string>
    <string name="moses_title">MoSeS</string>
    <string name="version">Version: </string>
    <string name="moses_logo">MoSeS logo</string>
    <string name="tap_to_skip">Tap to skip</string>

    <!-- Installed List -->
    <string name="installedApkList_defaultHint">Click on a user study to view the full description.</string>
    <string name="installedApkList_emptyHint">There are no running user studies on your device.</string>

    <!-- Available List -->
    <string name="availableApkList_defaultHint">Click on a user study to view the full description.</string>
    <string name="availableApkList_emptyHint">No user studies are available that match your device and enabled sensors. Enabling more sensors in the settings may show more user studies.</string>
    <string name="availableTab_UserStudies">Available User Studies:</string>
    <string name="availableTab_btnOk">Yes</string>
    <string name="availableTab_noInternetConnection">Cannot display the app information because no internet connection seems to be present</string>
    
    
    <!-- History List -->
    <string name="historyList_defaultHint">Click on a user study to view the full description.</string>
    <string name="historyList_emptyHint">There are no past user studies on your device.</string>
    
    <!-- APK List -->
    <string name="apklist_hint_pendingrequest">Waiting for server &#8230;</string>
    <string name="apklist_hint_noconnectivity">Your device appears not to be connected to the internet. You may retry to load the user study list anyway: &#160;</string>

    <!-- App Info -->
    <string name="text_sensor">Sensors: &#160;</string>
    <string name="text_app_description">User study description: &#160;</string>
    
    <!-- Moses Service -->
    <string name="no_username_password">Please enter your username and password before logging in.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_deviceid">No device id entered.</string>
    <string name="welcome_to_moses_title_string">Welcome to MoSeS!</string>
    <string name="welcome_to_moses_string">You have to provide some information about your account and the sensors you want to share.</string>
    <string name="unknown_response_from_server">Unknown response from server. Maybe you forgot to login to your HotSpot?</string>

    <!-- Preferences -->
    <string name="settings_title">MoSeS - Settings</string>
    <string name="show_splash">Show splash screen</string>
    <string name="sensor_data_pref_title">Sensor preferences</string>
    <string name="sensor_data_pref_summary">Select the sensors you want to share.</string>
    <string name="sensor_data_pref_dialog_title">Select the sensors you want to share: &#160;</string>
    <string name="title_autologin_pref">Login automatically?</string>
    <string name="summary_autologin_pref">Please tick this checkbox if you want to login to the service on each program start.</string>
    <string name="dialog_title_password_pref">Password</string>
    <string name="summary_password_pref">Please enter your MoSeS password.</string>
    <string name="title_password_pref">Password</string>
    <string name="device_prefs">Device settings</string>
    <string name="pref_deviceid">Device name</string>
    <string name="pref_change_id">Change the name of this device.</string>
    <string name="pref_enter_new_id">Enter a new name for this device.</string>
    <string name="application_prefs">Application settings</string>
    <string name="general_settings">General</string>
    <string name="general_settings_summary">Control spash screen or change the name of this device</string>
    <string name="dev_id_invalid_character_error">Only alphanumeric characters, underscores and spaces allowed.</string>
    <string name="dev_id_empty_error">Device name may not be empty.</string>
<!--     <string name="dev_id_invalid_character_error">Only .</string> -->
<!--     <string name="dev_id_empty_error">Device id .</string> -->

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_update">Update App</string>
    <string name="button_close">Close</string>
    <string name="button_start">Start</string>
    
    <!-- Checkboxes -->
    <string name="remember_credentials">Remember Credentials</string>

    <!-- Menus -->
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_hardwareinfo">Hardware Information</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_connect">Connect</string>
    <string name="btn_questionnaire">Questionnaire</string>
    
    <!-- Details -->
    <string name="details_running_noquestionnaire">no questionnaire</string>
    <string name="details_running_questionnairesent">questionnaire sent</string>

</resources>