<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:moses="http://schemas.android.com/apk/res/de.da_sense.moses.client"
    android:key="base_pref" >

    <PreferenceCategory
        android:key="dev_prefs"
        android:title="@string/device_prefs" >
        <de.da_sense.moses.client.preferences.ListPreferenceMultiSelect
            android:defaultValue="[]"
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogTitle="@string/sensor_data_pref_dialog_title"
            android:entries="@array/entries"
            moses:entryImages="@array/entryImages"
            android:entryValues="@array/entryValues"
            android:key="sensor_data"
            android:summary="@string/sensor_data_pref_summary"
            android:title="@string/sensor_data_pref_title" />

        <EditTextPreference
            android:dialogIcon="@drawable/ic_launcher"
            android:dialogMessage="@string/pref_deviceid_message"
            android:dialogTitle="@string/pref_deviceid"
            android:key="deviceid_pref"
            android:summary="@string/pref_deviceid_message"
            android:title="@string/pref_deviceid" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="app_prefs"
        android:title="@string/application_prefs" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="splashscreen_pref"
            android:title="@string/show_splash" />
    </PreferenceCategory>

</PreferenceScreen>