<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_medium"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_moses_logo" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_hint"
        android:inputType="textNoSuggestions"
        android:lines="@integer/login_max_lines"
        android:maxLines="@integer/login_max_lines" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_hint_pass"
        android:inputType="textPassword"
        android:lines="@integer/login_max_lines"
        android:maxLines="@integer/login_max_lines" >

    </EditText>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_login"
        android:onClick="handleClick" />

</LinearLayout>